# myGst

./: .gitignore  CMakeLists.txt  gstreamer_rtsp.cpp
